@@ -179,7 +179,7 @@ table tr th:last-child, table tr td:last-child {
    background-color: white; float: left; max-width: 100%;
    min-height: 100%; padding: 9px 18px 9px 18px; position: relative;
 }
-.container { float: left; overflow: hidden; position: relative; }
+.container { overflow: hidden; position: relative; }
 .container img { border: 0 none; height: auto; max-width: 100%; }
 .container-center {  margin-left: auto; margin-right: auto; max-width: 940px; }
 .container-fluid { margin: 0 auto; padding-top: 54px; }
@@ -407,6 +407,7 @@ table tr th:last-child, table tr td:last-child {
    color: Yellow; display: block; font-size: 16px; line-height: 18px;
    padding: 8px 16px 4px 16px;
 }
+.unbounded { overflow-x: auto; }
 .upload-file { margin: 9px; overflow: hidden; position: relative; }
 .upload-file .upload {
    cursor: pointer; .opacity( 0 ); position: absolute; top: 0; right: 0;
